--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container-nav"> 
-    <img src="/imagenes/logo.jpg" alt="200">
+    <img src="imagenes/logo.jpg" alt="200">
     <nav class="navbar" role="navigation">
       <a href="centroCritiano.html" class="brand">Centro cristiano </a>
       <ul class="nav-links">
