--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </section>
               </div>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/bcVjxchxvRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              <video src="/imagenes/barak.mp4.mp4" width=500 controls></VIdeo>
+              <video src="imagenes/barak.mp4.mp4" width=500 controls></VIdeo>
            <script src="barra.js"></script>  
         </body>
       <footer class="piePagina">
